# EmbeddedDesignClass

ece544_Proj1/Vitis/: .analytics
ece544_Proj1/Vitis/embsys/: vitis-comp.json
ece544_Proj1/Vitis/embsys_app/: vitis-comp.json
ece544_Proj1/application/: gsproj_app.c
ece544_Proj1/application/Boolean/: gsproj_app.c
ece544_Proj1/constraints/: booleanfpga.xdc  nexysA7fpga.xdc
ece544_Proj1/hdl/: booleanfpga.v  nexysa7fpga.v
ece544_Proj1/project_1/: nexysa7fpga.xsa  project_1.xpr
ece544w25_proj1_release_1_0/: project_1.xpr
ece544w25_proj1_release_1_0/appl_test_nexys4io_soln/: test_nexys4io.c
ece544w25_proj1_release_1_0/constraints/: booleanfpga.xdc
ece544w25_proj1_release_1_0/hdl/: booleanfpga.sv  nexysa7fpga.sv  rgbPWM_r2.v
ece544w25_proj1_release_1_0/project_1.cache/wt/: synthesis.wdf  webtalk_pa.xml
ece544w25_proj1_release_1_0/project_1.runs/.jobs/: vrs_config_1.xml  vrs_config_3.xml
ece544w25_proj1_release_1_0/project_1.runs/impl_1/: rundef.js  (+41 more)
rvfpga-el2-v3.0/RVfpga/: ReadmeFirst.docx
rvfpga-el2-v3.0/RVfpga/RVfpgaEL2/RVfpga_Basys3/Labs/RVfpgaLabsSolutions/Lab07/Exercise1/: CMakeLists.txt
rvfpga-el2-v3.0/RVfpga/RVfpgaEL2/RVfpga_Basys3/Labs/RVfpgaLabsSolutions/Lab07/Exercise1/src/: Switches7SegDispl_C-Lang.c
rvfpga-el2-v3.0/RVfpga/RVfpgaEL2/RVfpga_Basys3/Labs/RVfpgaLabsSolutions/Lab07/Exercise2/: CMakeLists.txt
rvfpga-el2-v3.0/RVfpga/RVfpgaEL2/RVfpga_Basys3/Labs/RVfpgaLabsSolutions/Lab07/Exercise2/src/: MovingString7SegDispl_C-Lang.c
rvfpga-el2-v3.0/RVfpga/RVfpgaEL2/RVfpga_Boolean/Labs/RVfpgaLabsSolutions/Lab08/Exercise3/: CMakeLists.txt
(+1255 files in other folders)
